[SD-678] Adds SASS variable for global border style

--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -7,6 +7,7 @@ $meganav-font-color: $font-color;
 $meganav-background: $primary-background;
 $footer-font-color: $font-color;
 $footer-background: $primary-background;
+$global-border-style: #e2e2e2;
 $spree-header-max-width: 1440px;
 $spree-header-mobile-height: 50px;
 $spree-header-tablet-height: 75px;
