--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/nav_bar.scss
@@ -18,6 +18,9 @@
         outline: none;
       }
     }
+    .dropdown-menu {
+      border-color: $global-border-style;
+    }
   }
   &-search-menu {
     position: static;
