--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/header.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/header.scss
@@ -12,6 +12,7 @@ body {
 .header-spree {
   background: $header-background;
   color: $header-font-color;
+  border-color: $global-border-style !important;
   position: fixed;
   top: 0;
   width: 100%;
