--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
@@ -20,7 +20,7 @@
     padding: 0 19px;
     &-item {
       padding: 16px 0;
-      border-bottom: 1px solid $secondary-background;
+      border-bottom: 1px solid $global-border-style;
       @include media-breakpoint-up(sm) {
         padding: 32px 0;
       }
@@ -55,7 +55,7 @@
     }
     &-header {
       padding: 16px 0;
-      border-bottom: 1px solid theme-color("dark-text");
+      border-bottom: 1px solid $global-border-style;
     }
   }
 }
