--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/users/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/users/show.scss
@@ -188,7 +188,7 @@
   }
 
   &-orders {
-    border-top: 1px solid theme-color('borders');
+    border-top: 1px solid $global-border-style;
     h3 {
       @include media-breakpoint-down(sm) {
         margin: 30px 0 0;
@@ -196,7 +196,7 @@
       }
     }
     tr {
-      border-bottom: 1px solid theme-color('borders');
+      border-bottom: 1px solid $global-border-style;
 
       @include media-breakpoint-down(md) {
         &:last-child {
