--- a/frontend/app/views/spree/shared/_copyright.html.erb
+++ b/frontend/app/views/spree/shared/_copyright.html.erb
@@ -1,6 +1,6 @@
-<div class="border-bottom border-top">
+<div class="border-bottom border-top footer-spree-copyright">
   <div class="container">
-    <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center py-3 footer-spree-copyright">
+    <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center py-3 footer-spree-copyright-content">
       <div>Designed and developed by</div>
       <div class="mb-1 mb-lg-0">
         <%= link_to 'https://sparksolutions.co/', target: :blank, 'aria-label': 'Go to Spark Solutions', rel: :follow do %>
