--- a/frontend/app/views/spree/orders/_line_item_data.html.erb
+++ b/frontend/app/views/spree/orders/_line_item_data.html.erb
@@ -9,9 +9,9 @@
 </div>
 <div class="shopping-cart-item-quantity <%= additional_classes %>" data-hook="cart_item_quantity">
   <div class="d-flex align-items-center">
-    <%= button_tag '-', type: 'button', class: "border border-right-0 shopping-cart-item-quantity-decrease-btn", data: { id: dom_id(line_item) } %>
+    <%= button_tag '-', type: 'button', class: "border-right-0 shopping-cart-item-quantity-decrease-btn", data: { id: dom_id(line_item) } %>
     <%= item_form.number_field :quantity, min: 0, class: "form-control text-center border-left-0 border-right-0 shopping-cart-item-quantity-input", size: 5, data: { id: dom_id(line_item) } %>
-    <%= button_tag '+', type: 'button', class: "border border-left-0 shopping-cart-item-quantity-increase-btn", data: { id: dom_id(line_item) } %>
+    <%= button_tag '+', type: 'button', class: "border-left-0 shopping-cart-item-quantity-increase-btn", data: { id: dom_id(line_item) } %>
   </div>
 </div>
 
