[SD-702] Implement $input-border variable

--- a/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
@@ -5,7 +5,8 @@
   width: 100%;
   height: auto;
   border-width: 1px;
-  border-color: theme-color('dark-text');
+  border-style: solid;
+  border-color: $input-border;
   border-radius: 0;
   outline: none;
   font-size: font-px-to-rem(12px);
@@ -19,7 +20,7 @@
     font-size: font-px-to-rem(14px);
   }
   &:focus {
-    border-color: theme-color('primary');
+    border-color: theme-color('secondary');
   }
   &::placeholder {
     text-transform: uppercase;
