--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -1,6 +1,9 @@
+$primary-color: #0074C2;
+$secondary-color: #4c4c4c;
 $primary-background: #ffffff;
 $secondary-background: #f2f2f2;
 $input-background: #ffffff;
+$input-border: #232323;
 $font-color: black;
 $font-family: 'Montserrat', sans-serif;
 $header-font-color: $font-color;
