Added JSON LD caching for Home Page

--- a/frontend/app/views/spree/home/index.html.erb
+++ b/frontend/app/views/spree/home/index.html.erb
@@ -136,4 +136,6 @@
   </div>
 </div>
 
-<%= products_structured_data((@bestsellers_products.to_a + @trending_products.to_a).uniq.compact) %>
+<% cache "spree/home/ld/#{@ld_products_updated_at}" do %>
+  <%= products_structured_data((@bestsellers_products.to_a + @trending_products.to_a).uniq.compact) %>
+<% end %>
