Added caching of JSON LD on PLPs

--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -83,4 +83,6 @@
 
 <%= render 'spree/products/filters_mobile', permitted_params: permitted_params %>
 
-<%= products_structured_data(@products) %>
+<% cache cache_key_for_products(@products, 'json-ld') do %>
+  <%= products_structured_data(@products) %>
+<% end %>
