[SD-682] Implement $secondary-font-color variable

--- a/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
@@ -48,6 +48,7 @@
         width: $size;
         height: $size;
         background: $secondary-background;
+        color: $secondary-font-color;
       }
       &--previous {
         left: 15px;
