--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/layouts/spree_application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/layouts/spree_application.scss
@@ -30,6 +30,7 @@ body {
   .dropdown-item {
     &:hover, &:focus {
       background: $secondary-background;
+      color: $secondary-font-color;
     }
   }
 }
