--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
@@ -33,6 +33,7 @@
       width: $size;
       height: $size;
       background: $secondary-background;
+      color: $secondary-font-color;
     }
   }
   &-item {
