--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/category_nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/category_nav_bar.scss
@@ -40,6 +40,7 @@
 
   &-image {
     background: $secondary-background;
+    color: $secondary-font-color;
     display: flex;
     justify-content: center;
     flex-direction: column;
