--- a/frontend/app/views/spree/checkout/registration.html.erb
+++ b/frontend/app/views/spree/checkout/registration.html.erb
@@ -2,17 +2,19 @@
 <div class="checkout-registration container">
   <div class="row col-xs-12 col-lg-11 mx-auto">
     <div class="col-xs-12 col-lg-6">
-      <%= render partial: 'spree/shared/login' %>
+      <%= render partial: 'spree/shared/login' if defined?(spree_login_path) %>
     </div>
     <div class="col-xs-12 col-lg-6">
       <div class="col-lg-11 mx-auto pt-lg-2">
-        <h3 class="spree-header header-sm spree-mt-large mb-3 mb-sm-4 mb-xl-4"><%= Spree.t('dont_have_account') %></h3>
-        <%= link_to Spree.t(:sign_up), spree.signup_path, class: 'btn btn-block btn-outline-primary spree-btn' %>
-        <div class="checkout-registration-styled-or">
-          <%= Spree.t(:or) %>
-        </div>
+        <% if defined?(spree_signup_path) %>
+          <h3 class="spree-header header-sm spree-mt-large mb-3 mb-sm-4 mb-xl-4"><%= Spree.t('dont_have_account') %></h3>
+          <%= link_to Spree.t(:sign_up), spree_signup_path, class: 'btn btn-block btn-outline-primary spree-btn' %>
+          <div class="checkout-registration-styled-or">
+            <%= Spree.t(:or) %>
+          </div>
+        <% end %>
         <% if Spree::Config[:allow_guest_checkout] %>
-          <% path = spree.respond_to?(:update_checkout_registration_path) ? spree.update_checkout_registration_path : spree.signup_path %>
+          <% path = spree.respond_to?(:update_checkout_registration_path) ? spree.update_checkout_registration_path : spree_signup_path %>
 
           <%= form_for @order, url: path, method: :put, html: { id: 'checkout_form_registration' } do |f| %>
             <div class="form-group">
