[SD-682] Set default for $secondary-font-color

--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -12,7 +12,7 @@ $meganav-font-color: $font-color;
 $meganav-background: $primary-background;
 $footer-font-color: $font-color;
 $footer-background: $primary-background;
-$secondary-font-color: #000000;
+$secondary-font-color: $font-color;
 $global-border-style: #e2e2e2;
 $spree-header-max-width: 1440px;
 $spree-header-mobile-height: 50px;
