[SD-685] Primary Color - Search Results Implementation

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
@@ -15,6 +15,7 @@
   }
 
   &-not-found-image {
+    color: $primary-color;
     margin-top: 3rem;
     @include media-breakpoint-up(sm) {
       width: 177.5px;
