[SD-690] Primary Color - Cart (empty) Implementation

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -16,6 +16,7 @@
   }
   &-empty {
     &-image {
+      color: $primary-color;
       margin-top: 64px;
       margin-bottom: 25px;
       @include media-breakpoint-up(sm) {
