[SD-692] Primary Color - Checkout (Address Step) Implementation

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -478,6 +478,9 @@
           font-size: font-px-to-rem(16px);
         }
       }
+      .delete-address-img {
+        color: $primary-color;
+      }
     }
 
     #checkout-summary {
