[SD-709] Secondary Color - Pop-ups

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/product_added_modal.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/product_added_modal.scss
@@ -1,5 +1,8 @@
 .product-added-modal {
   $self: &;
+  &-check-mark {
+    color: $secondary-color;
+  }
   &-message {
     font-size: font-px-to-rem(20px);
     @include media-breakpoint-up(md) {
