--- a/frontend/app/views/spree/shared/_product_added_modal.html.erb
+++ b/frontend/app/views/spree/shared/_product_added_modal.html.erb
@@ -20,11 +20,11 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-md-2 d-flex w-auto">
               <%= icon(name: 'check-mark-circle',
-                       classes: 'd-block d-lg-none mx-auto',
+                       classes: 'd-block d-lg-none mx-auto product-added-modal-check-mark',
                        width: 38,
                        height: 38) %>
               <%= icon(name: 'check-mark-circle',
-                       classes: 'd-none d-lg-block mx-auto',
+                       classes: 'd-none d-lg-block mx-auto product-added-modal-check-mark',
                        width: 68,
                        height: 68) %>
             </div>
