[SD-711] Secondary Color - Checkout (top section). Fix radio issue.

--- a/frontend/app/assets/stylesheets/spree/frontend/functions.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/functions.scss
@@ -49,3 +49,56 @@ $font-size-base-px: 16px; //assuming 16px is 1rem ($font-size-base: 1rem in Boot
 @function thubnails-carousel-content-min-height($per-page, $single-gap, $single-height: $thumbnails-carousel-single-height){
   @return $per-page * $single-height + ($per-page - 1) * $single-gap;
 }
+
+// Replace letters
+@function str-replace($string, $search, $replace: '') {
+  $index: str-index($string, $search);
+
+  @if $index {
+    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+  }
+
+  @return $string;
+}
+
+// Encode symbols
+@function url-encode($string) {
+  $map: (
+          "%": "%25",
+          "<": "%3C",
+          ">": "%3E",
+          " ": "%20",
+          "!": "%21",
+          "*": "%2A",
+          "'": "%27",
+          '"': "%22",
+          "(": "%28",
+          ")": "%29",
+          ";": "%3B",
+          ":": "%3A",
+          "@": "%40",
+          "&": "%26",
+          "=": "%3D",
+          "+": "%2B",
+          "$": "%24",
+          ",": "%2C",
+          "/": "%2F",
+          "?": "%3F",
+          "#": "%23",
+          "[": "%5B",
+          "]": "%5D"
+  );
+
+  $new: $string;
+
+  @each $search, $replace in $map {
+    $new: str-replace($new, $search, $replace);
+  }
+
+  @return $new;
+}
+
+// Format the SVG as a URL
+@function inline-svg($string) {
+  @return url('data:image/svg+xml,#{url-encode($string)}');
+}
