[SD-707] Secondary Color - PLP Page

--- a/frontend/app/assets/stylesheets/spree/frontend/variables/bootstrap-overrides.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/bootstrap-overrides.scss
@@ -8,8 +8,8 @@ $theme-colors: (
   "info": #999999,
   "warning": #ffc107,
   "light-secondary": #999999,
-  "borders": #e2e2e2,
-  "dark-borders": #eceef0,
+  "borders": $second-global-border,
+  "dark-borders": $global-border-style,
   "light-background": $primary-background,
   "dark-text": #232323,
   "overlay": rgba(76, 76, 76, 0.5),
