--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/cart_form.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/cart_form.scss
@@ -231,7 +231,7 @@
   }
 
   input:checked + & {
-    border-color: theme-color('dark-text');
+    border-color: theme-color('secondary');
   }
 }
 
