--- a/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
@@ -6,7 +6,7 @@
   height: auto;
   border-width: 1px;
   border-style: solid;
-  border-color: $input-border;
+  border-color: $second-global-border;
   border-radius: 0;
   outline: none;
   font-size: font-px-to-rem(12px);
