--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -3,7 +3,6 @@ $secondary-color: #4c4c4c;
 $primary-background: #ffffff;
 $secondary-background: #f2f2f2;
 $input-background: #ffffff;
-$input-border: #232323;
 $font-color: black;
 $font-family: 'Montserrat', sans-serif;
 $header-font-color: $font-color;
@@ -14,6 +13,7 @@ $footer-font-color: $font-color;
 $footer-background: $primary-background;
 $secondary-font-color: $font-color;
 $global-border-style: #e2e2e2;
+$second-global-border: #e2e2e2;
 $spree-header-max-width: 1440px;
 $spree-header-mobile-height: 50px;
 $spree-header-tablet-height: 75px;
