--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/footer.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/footer.scss
@@ -21,16 +21,14 @@
   }
   &-copyright {
     border-color: $global-border-style !important;
-    &-content{
-      font-size: font-px-to-rem(9px);
-      a {
-        color: $footer-font-color;
-        text-decoration: underline;
-      }
+    font-size: font-px-to-rem(9px);
+    a {
+      color: $footer-font-color;
+      text-decoration: underline;
+    }
 
-      @include media-breakpoint-up(xl) {
-        font-size: font-px-to-rem(14px);
-      }
+    @include media-breakpoint-up(md) {
+      font-size: font-px-to-rem(14px);
     }
     &-logo-spark {
       height: 14px;
