[SD-708] Secondary Color - PDP Page

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/thumbnails.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/thumbnails.scss
@@ -27,7 +27,7 @@
         object-fit: contain;
         border: 1px solid transparent;
         &.selected {
-          border-color: #232323;
+          border-color: $secondary-color;
         }
       }
       &--empty {
