Added spark logo as png

--- a/frontend/app/views/spree/shared/_copyright.html.erb
+++ b/frontend/app/views/spree/shared/_copyright.html.erb
@@ -4,7 +4,7 @@
       <div>Designed and developed by</div>
       <div class="mb-1 mb-lg-0">
         <%= link_to 'https://sparksolutions.co/', target: :blank, 'aria-label': 'Go to Spark Solutions', rel: :follow do %>
-          <%= inline_svg_tag 'logo_spark.svg', class: 'footer-spree-copyright-logo-spark mx-2', alt: 'Spree Commerce & Ruby on Rails developers', title: 'Spree Commerce &amp; Ruby on Rails developers' %>
+          <%= image_tag 'spark-logo@3x.png', class: 'footer-spree-copyright-logo-spark mx-2', alt: 'Spree Commerce & Ruby on Rails developers', title: 'Spree Commerce & Ruby on Rails developers' %>
         <% end %>
       </div>
       <div class="d-none d-lg-inline-block mr-2">|</div>
