--- a/frontend/app/assets/stylesheets/spree/frontend/variables/bootstrap-overrides.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/bootstrap-overrides.scss
@@ -1,9 +1,9 @@
 $grid-gutter-width: 19px;
+$body-color: $font-color;
 $theme-colors: (
   // standard bootstrap colors
   "primary": $primary-color,
   "secondary": $secondary-color,
-  "tertiary": green,
   "danger": #f53737,
   "info": #999999,
   "warning": #ffc107,
@@ -11,7 +11,7 @@ $theme-colors: (
   "borders": $second-global-border,
   "dark-borders": $global-border-style,
   "light-background": $primary-background,
-  "dark-text": #232323,
+  "dark-text": $font-color,
   "overlay": rgba(76, 76, 76, 0.5),
   "shadow": rgba(0, 0, 0, .16)
 );
