Fix relative paths to styles

--- a/frontend/app/assets/stylesheets/spree/frontend/application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/application.scss
@@ -1,54 +1,54 @@
-@import './variables/variables';
-@import './variables/bootstrap-overrides';
-@import './variables/helper-variables';
-@import 'bootstrap';
-@import './bootstrap-patches';
+@import "spree/frontend/variables/variables";
+@import "spree/frontend/variables/bootstrap-overrides";
+@import "spree/frontend/variables/helper-variables";
+@import "bootstrap";
+@import "spree/frontend/bootstrap-patches";
 
-@import './fonts';
-@import './mixins';
-@import './functions';
-@import './margins';
+@import "spree/frontend/fonts";
+@import "spree/frontend/mixins";
+@import "spree/frontend/functions";
+@import "spree/frontend/margins";
 
-@import 'components-bootstrap/carousel';
-@import 'components-bootstrap/button';
-@import 'components-bootstrap/modal';
-@import 'components-bootstrap/alert';
+@import "spree/frontend/components-bootstrap/carousel";
+@import "spree/frontend/components-bootstrap/button";
+@import "spree/frontend/components-bootstrap/modal";
+@import "spree/frontend/components-bootstrap/alert";
 
-@import 'views/spree/shared/quantity_select';
-@import 'views/spree/layouts/spree_application';
-@import 'helpers/spree/frontend_helper';
-@import 'views/spree/icon';
-@import 'views/spree/shared/images';
-@import 'views/spree/shared/cart';
-@import 'views/spree/shared/category_nav_bar';
-@import 'views/spree/shared/footer';
-@import 'views/spree/shared/header';
-@import 'views/spree/shared/login';
-@import 'views/spree/shared/nav_bar';
-@import 'views/spree/shared/order_details';
-@import 'views/spree/shared/main_nav_bar';
-@import 'views/spree/errors/not_found';
-@import 'views/spree/shared/carousel/thumbnails';
-@import 'views/spree/shared/carousel/single';
-@import 'views/spree/home/index';
-@import 'views/spree/user_passwords/user_passwords';
-@import 'views/spree/user_sessions/new';
-@import 'views/spree/products/index';
-@import 'components-custom/headers';
-@import 'components-custom/inputs';
-@import 'views/spree/checkout/registration';
-@import 'views/spree/checkout/confirm';
-@import 'views/spree/checkout/payment';
-@import 'views/spree/orders/edit';
-@import 'views/spree/orders/show';
-@import 'views/spree/taxons/show';
-@import 'views/spree/users/show';
-@import 'views/spree/checkout/edit';
-@import 'views/spree/shared/product';
-@import 'views/spree/products/show';
-@import 'views/spree/products/cart_form';
-@import 'views/spree/shared/product_added_modal';
-@import 'views/spree/shared/mobile_navigation';
-@import 'views/spree/shared/no_product_available';
-@import 'views/spree/shared/color_select';
-@import 'views/spree/shared/delete_address_popup';
+@import "spree/frontend/views/spree/shared/quantity_select";
+@import "spree/frontend/views/spree/layouts/spree_application";
+@import "spree/frontend/helpers/spree/frontend_helper";
+@import "spree/frontend/views/spree/icon";
+@import "spree/frontend/views/spree/shared/images";
+@import "spree/frontend/views/spree/shared/cart";
+@import "spree/frontend/views/spree/shared/category_nav_bar";
+@import "spree/frontend/views/spree/shared/footer";
+@import "spree/frontend/views/spree/shared/header";
+@import "spree/frontend/views/spree/shared/login";
+@import "spree/frontend/views/spree/shared/nav_bar";
+@import "spree/frontend/views/spree/shared/order_details";
+@import "spree/frontend/views/spree/shared/main_nav_bar";
+@import "spree/frontend/views/spree/errors/not_found";
+@import "spree/frontend/views/spree/shared/carousel/thumbnails";
+@import "spree/frontend/views/spree/shared/carousel/single";
+@import "spree/frontend/views/spree/home/index";
+@import "spree/frontend/views/spree/user_passwords/user_passwords";
+@import "spree/frontend/views/spree/user_sessions/new";
+@import "spree/frontend/views/spree/products/index";
+@import "spree/frontend/components-custom/headers";
+@import "spree/frontend/components-custom/inputs";
+@import "spree/frontend/views/spree/checkout/registration";
+@import "spree/frontend/views/spree/checkout/confirm";
+@import "spree/frontend/views/spree/checkout/payment";
+@import "spree/frontend/views/spree/orders/edit";
+@import "spree/frontend/views/spree/orders/show";
+@import "spree/frontend/views/spree/taxons/show";
+@import "spree/frontend/views/spree/users/show";
+@import "spree/frontend/views/spree/checkout/edit";
+@import "spree/frontend/views/spree/shared/product";
+@import "spree/frontend/views/spree/products/show";
+@import "spree/frontend/views/spree/products/cart_form";
+@import "spree/frontend/views/spree/shared/product_added_modal";
+@import "spree/frontend/views/spree/shared/mobile_navigation";
+@import "spree/frontend/views/spree/shared/no_product_available";
+@import "spree/frontend/views/spree/shared/color_select";
+@import "spree/frontend/views/spree/shared/delete_address_popup";
