--- a/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/variables/variables.scss
@@ -1,10 +1,10 @@
-$primary-color: #0074C2;
+$primary-color: #0074c2;
 $secondary-color: #4c4c4c;
 $primary-background: #ffffff;
 $secondary-background: #f2f2f2;
 $input-background: #ffffff;
 $font-color: black;
-$font-family: 'Montserrat', sans-serif;
+$font-family: "Montserrat", sans-serif;
 $header-font-color: $font-color;
 $header-background: $primary-background;
 $meganav-font-color: $font-color;
