--- a/frontend/app/views/spree/shared/_checkout_header.html.erb
+++ b/frontend/app/views/spree/shared/_checkout_header.html.erb
@@ -6,12 +6,12 @@
                 classes: 'spree-icon-arrow spree-icon-arrow-left',
                 width: 7,
                 height: 14) %>
-        <%= link_to Spree.t('checkout_page.back_to_cart'), spree.cart_path, class: "d-none d-sm-inline text-uppercase" %>
-        <%= link_to Spree.t('back'), spree.cart_path, class: "d-sm-none text-uppercase" %>
+        <%= link_to Spree.t('checkout_page.back_to_cart'), spree.cart_path, class: "d-none d-sm-inline text-uppercase", method: :get %>
+        <%= link_to Spree.t('back'), spree.cart_path, class: "d-sm-none text-uppercase", method: :get %>
       </div>
       <div class="d-flex flex-nowrap align-items-center justify-content-center">
         <figure class="logo flex-grow-0 flex-xl-grow-0 order-xl-0 header-spree-fluid-logo">
-          <%= logo %>
+        <%= logo(Spree::Config[:logo], method: :get) %>
         </figure>
       </div>
     </div>
